[package]
name = "gdbm_compat"
version = "0.1.1"
edition = "2018"
authors = ["wuaoxiang <os.popen@gmail.com>"]
description = "binding of gdbm_compat(/usr/lib/libgdbm_compat.so) single file key-value database"
keywords = ["database", "gdbm", "dbm", "key-value", "sqlite"]
categories = ["database", "api-bindings"]
repository = "https://github.com/pymongo/gdbm_compat"
documentation = "https://man7.org/linux/man-pages/man3/dbm_open.3p.html"
homepage = "https://docs.rs/gdbm_compat"
readme = "README.md"
license = "MIT"

[dev-dependencies]
libc = "0.2"
